--- a/app/src/main/res/layout/keyboard_qwerty_view.xml
+++ b/app/src/main/res/layout/keyboard_qwerty_view.xml
@@ -209,21 +209,18 @@
         android:layout_height="50dp"
         android:gravity="center_horizontal"
         android:orientation="horizontal">
-        <TextView
+        <ImageButton
             android:id="@+id/qwertyShift"
             android:layout_width="58dp"
             android:layout_height="match_parent"
             android:layout_margin="1dp"
             android:background="@drawable/bg_shift_functional_button"
             android:contentDescription="@string/cd_shift"
-            android:gravity="center"
-            android:clickable="true"
-            android:focusable="true"
-            android:stateListAnimator="@animator/key_button_state_list"
-            android:text="⇧"
-            android:textColor="?attr/colorOnSurfaceVariant"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            android:padding="8dp"
+            android:src="@drawable/ic_shift"
+            android:tint="@color/tint_shift_icon"
+            android:scaleType="fitCenter"
+            android:stateListAnimator="@animator/key_button_state_list" />
         <TextView android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"
             android:layout_margin="1dp" android:gravity="center" android:background="@drawable/bg_key_button"
             android:text="z" android:textSize="20sp" android:textColor="?attr/colorOnSurfaceVariant" android:tag="letter_key"/>
