--- a/app/src/main/res/layout/keyboard_view.xml
+++ b/app/src/main/res/layout/keyboard_view.xml
@@ -30,6 +30,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- 实时音频波形：位于状态栏与麦克风按钮之间 -->
+    <com.brycewg.asrkb.ui.AudioWaveView
+        android:id="@+id/audioWaveView"
+        android:layout_width="0dp"
+        android:layout_height="64dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:contentDescription="@string/cd_audio_wave"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/txtStatus"
+        app:layout_constraintStart_toStartOf="@id/btnMic"
+        app:layout_constraintEnd_toEndOf="@id/btnMic"
+        app:layout_constraintBottom_toTopOf="@id/btnMic"/>
+
     <TextView
         android:id="@+id/btnPunct1"
         android:layout_width="52dp"
@@ -290,6 +304,7 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.607"
         app:maxImageSize="40dp"
         app:pressedTranslationZ="0dp"
         app:srcCompat="@drawable/ic_mic"
